--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "express": "^5.1.0",
     "nodemailer": "^7.0.6",
     "uuid": "^11.1.0"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
